detaching-member: Fix false positive

When calling m_listOfValues[0].nonConstMethod() we can't use .at()

BUG: 356699