tests/detaching-member/main.cpp
@@ -93,8 +93,8 @@ struct S
 void test356699()
 {
     S s;
-    // s.m_listOfValues[0].nonConstMethod(); // OK FIXME
     s.m_listOfPointers[0]->nonConstMethod(); // Warning
+    s.m_listOfValues[0].nonConstMethod(); // OK
     s.m_listOfValues.at(0).constMethod(); // OK
     s.m_listOfPointers.at(0)->nonConstMethod(); // OK
 }
